--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GrabCab Admin",
-  "name": "GrabCab Admin Dashboard App",
+  "short_name": "Logix Admin",
+  "name": "Logix Admin Dashboard App",
   "icons": [
     {
       "src": "favicon.ico",
